added dateAdded property to product entity
